--- a/CatFactPuller/CatFactPuller.csproj
+++ b/CatFactPuller/CatFactPuller.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RestSharp" Version="107.2.0" />
+    <PackageReference Include="SimpleInjector" Version="5.3.3" />
+  </ItemGroup>
+
 </Project>
